test/tests/operators/from_microsoft_graph/error_access_token.txt
error: failed to fetch Azure access token: HTTP code `400`
  --> tests/operators/from_microsoft_graph/error_access_token.tql:10:8
   |
10 |   auth={
   |        ^ 
   |
   = note: response body: {"error": "unexpected client_secret: ['wrong-secret']"}
